// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots GridX Horizontal Alignment alignX center 1`] = `
<XYGridElement
  alignX="center"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    small={4}
    vertical={false}
  >
    Aligned to
  </Cell>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".1"
    small={4}
    vertical={false}
  >
    the center
  </Cell>
</XYGridElement>
`;

exports[`Storyshots GridX Horizontal Alignment alignX justify 1`] = `
<XYGridElement
  alignX="justify"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    small={4}
    vertical={false}
  >
    Aligned to
  </Cell>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".1"
    small={4}
    vertical={false}
  >
    the justify
  </Cell>
</XYGridElement>
`;

exports[`Storyshots GridX Horizontal Alignment alignX left 1`] = `
<XYGridElement
  alignX="left"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    small={4}
    vertical={false}
  >
    Aligned to
  </Cell>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".1"
    small={4}
    vertical={false}
  >
    the left
  </Cell>
</XYGridElement>
`;

exports[`Storyshots GridX Horizontal Alignment alignX right 1`] = `
<XYGridElement
  alignX="right"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    small={4}
    vertical={false}
  >
    Aligned to
  </Cell>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".1"
    small={4}
    vertical={false}
  >
    the right
  </Cell>
</XYGridElement>
`;

exports[`Storyshots GridX Horizontal Alignment alignX spaced 1`] = `
<XYGridElement
  alignX="spaced"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    small={4}
    vertical={false}
  >
    Aligned to
  </Cell>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".1"
    small={4}
    vertical={false}
  >
    the spaced
  </Cell>
</XYGridElement>
`;
